# Sleepie

./: .gitignore  CLAUDE.md  project.yml
.claude/: settings.local.json
Slipie/: Info.plist
Slipie.xcodeproj/: project.pbxproj
Slipie/App/: AppEnvironment.swift  ContentView.swift  RootView.swift  SlipieApp.swift
Slipie/Components/: BiometricIndicator.swift  FilterChipView.swift  GlowingCardView.swift  HeroHeaderView.swift  LibraryCardView.swift  MiniPlayerView.swift  MoonView.swift  PageDotsView.swift  PagodaSilhouette.swift  PagodaSilhouetteView.swift  (+11 more)
SlipieCoreKit/: Package.resolved  Package.swift
SlipieTests/: SlipieTests.swift
SlipieWatch/: Info.plist
backend/: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  railway.toml
backend/app/: config.py  dependencies.py  main.py
backend/app/analytics/: routes.py  schemas.py  service.py
backend/app/audio/: musicgen_client.py  parameter_mapper.py  procedural.py  prompt_builder.py  routes.py  schemas.py  service.py
backend/app/auth/: jwt.py  routes.py  schemas.py  service.py
backend/app/sessions/: classifier.py  routes.py  schemas.py  scorer.py  service.py  websocket.py
backend/app/soundscapes/: catalog.py  routes.py  schemas.py
backend/scripts/: test_musicgen.py
backend/sleepie_backend.egg-info/: SOURCES.txt  requires.txt
backend/tests/: conftest.py  test_analytics.py  test_audio.py  test_auth.py  test_classifier.py  test_health.py  test_parameter_mapper.py  test_scorer.py  test_soundscapes.py
scripts/: generate-secrets.sh  supabase-shell.sh
supabase/: config.toml
(+1746 files in other folders)
